refactor `TrainParser`